--- a/appspec.yml
+++ b/appspec.yml
@@ -6,8 +6,8 @@ files:
 permissions:
   - object: /home/ubuntu/web
     pattern: "**"
-    owner: ubuntu
-    group: ubuntu
+    owner: www-data
+    group: www-data
     mode: 755
     type:
        - file
